Separate http auth (for admin server)